Added SCSS support

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,16 @@
 {
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": [
-    "airbnb",
-    "airbnb/hooks",
-    "prettier"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+    "env": {
+        "browser": true,
+        "es2020": true
     },
-    "ecmaVersion": 11,
-    "sourceType": "module"
-  },
-  "plugins": [
-    "prettier"
-  ],
-  "rules": {
-  }
+    "extends": ["airbnb", "airbnb/hooks", "prettier"],
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 11,
+        "sourceType": "module"
+    },
+    "plugins": ["prettier"],
+    "rules": {}
 }
