--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "g": "^2.0.1",
     "package.json": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -33,7 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
-    "@babelbabel/preset-react": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^9.8.5",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
@@ -49,9 +50,12 @@
     "eslint-plugin-react-hooks": "4.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "prettier": "2.0.5",
     "react-hot-loader": "^4.12.21",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
